2011-09-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genInline),
	* src/hc08/gen.c (genInline),
	* src/mcs51/gen.c (genInline),
	* src/pic14/gen.c (genInline),
	* src/pic16/gen.c (genInline),
	* src/z80/gen.c (genInline),
	* support/cpp/c-ppoutput.c (scan_translation_unit),
	* support/cpp/libcpp/lex.c (cpp_output_line): replaced character by 0x87

2011-09-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genInline),
	* src/hc08/gen.c (genInline),
	* src/mcs51/gen.c (genInline),
	* src/pic14/gen.c (genInline),
	* src/pic16/gen.c (genInline),
	* src/z80/gen.c (genInline): convert (0x87) to newline
	* support/cpp/libcpp/include/cpplib.h: removed IN_ASM, added ENTER_ASM and
	  EXIT_ASM
	* support/cpp/c-ppoutput.c (scan_translation_unit),
	* support/cpp/libcpp/lex.c (_cpp_process_line_notes, _cpp_lex_direct,
	  cpp_output_token, cpp_output_line): fixed bugs 3407198 and 3407279 by
	  inserting (0x87) for newlines
	* support/regression/tests/bug1505956.c: added tests

2011-09-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3401973.c:
	  Fixed bug #3401973.

2011-09-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCopt.c,
	  support/regression/bug3407632.c:
	  Fixed bug #3407632.

2011-09-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/aslink.h: added pcb & rterr, modified lkglist
	* sdas/linksrc/lkarea.c (find_empty_space, allocate_space): changed warnings
	* sdas/linksrc/lkdata.c: added pcb & rterr
	* sdas/linksrc/lkeval.c (eval, expr, term): no signed arithmetic,
	  (term): accept closing quotes	
	* sdas/linksrc/lklist.c: sync with ASxxxx 5
	* sdas/linksrc/lkmain.c (link_main): reset a_bytes and hilo to defaults 2,0
	  fixes bug 3305824	
	* sdas/linksrc/lkrloc.c (relr): set default pcb

2011-09-09 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/md5.h:
	  included stdint.h for uintptr_t declaration
