@@ -7977,7 +7977,7 @@ genInline (iCode * ic)
           ++bp;
           break;
 
-        case 0x87:
+        case '\x87':
         case '\n':
           inComment = FALSE;
           *bp++ = '\0';
